# substack-pdf-archiver

./: .gitignore  CODEX_PROMPT.md  README.md  pyproject.toml
src/substack_pdf_archiver/: __init__.py  archiver.py  cli.py  config.py  print_css.py  site_profiles.py  utils.py
tests/: conftest.py  test_archive_fixture.py  test_archiver.py  test_cli.py  test_site_profiles.py  test_utils.py
tests/fixtures/: README.md  custom_domain_substack.html
tools/: sanitize_saved_html.py
